Fix frame tree mangling when a combobox is inside a pseudo-cell.  Bug 275746, r=bernd, sr=roc